--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
           libero rem nulla tempore explicabo illo at a voluptatum!
         </p>
       </article>
+      <article>
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
+          dolores tempora.
+        </p>
+      </article>
     </main>
     <hr />
     <footer>
