Added aditional article paragraph

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
           dolores tempora.
         </p>
       </article>
+      <article>
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem
+          voluptatem corrupti ipsam aspernatur, suscipit magnam consequuntur est
+          minima cupiditate sed officia neque nihil eveniet architecto nam
+          repudiandae explicabo voluptatibus? Dolore.
+        </p>
+      </article>
     </main>
     <hr />
     <footer>
