And yet another aditional article paragraph added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           repudiandae explicabo voluptatibus? Dolore.
         </p>
       </article>
+      <article>
+        <h4>Lorem, ipsum.</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto.</p>
+      </article>
     </main>
     <hr />
     <footer>
