Learned to use HTML comments

--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
           repudiandae explicabo voluptatibus? Dolore.
         </p>
       </article>
+      <!--
       <article>
         <h4>Lorem, ipsum.</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto.</p>
       </article>
-    </main>
+    --></main>
     <hr />
     <footer>
       <h3>Susisiekite su mumis:</h3>
       <h4>esports@mail.ru</h4>
-      <h4>112</h4>
+      <!-- <h4>112</h4> CTRL+? -->
     </footer>
   </body>
 </html>
