--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HTML-1</title>
   </head>
   <body>
+    <a href="#last-paragraph">Nuoroda i paskutini paragrafa</a>
     <header>
       <h1>esports.lt</h1>
       <nav>
@@ -63,12 +64,50 @@
         <h4>Lorem, ipsum.</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto.</p>
       </article>
-    --></main>
+    -->
+      <article>
+        <h4>Geriausi geimai</h4>
+        <ol>
+          <li>Stardew Valley</li>
+          <li>Subnautica</li>
+          <li>Cities: Skylines 2</li>
+          <li>Resident Evil 2</li>
+        </ol>
+        <h4>Geriausi zaidimai francizeje</h4>
+        <ul>
+          <li>Resident Evil</li>
+          <ul>
+            <li>Resident Evil 2</li>
+            <li>Resident Evil 1</li>
+            <li>Resident Evil 4</li>
+          </ul>
+          <li>NBA 2K</li>
+          <ul>
+            <li>NBA 2k11</li>
+            <li>NBA 2k12</li>
+            <li>NBA 2k14</li>
+          </ul>
+        </ul>
+      </article>
+    </main>
     <hr />
     <footer>
+      <h1>&copy;</h1>
+      <h1>&trade;</h1>
+      <h1>&euro;</h1>
       <h3>Susisiekite su mumis:</h3>
-      <h4>esports@mail.ru</h4>
+      <a href="mailto:esports@mail.ru">El pastas</a>
+      <a href="tel:+112">Telefono numeris</a>
       <!-- <h4>112</h4> CTRL+? -->
+      <a href="https://www.google.com/" target="_blank">Google linkas</a>
+      <a href="./contacts.html">Adresu puslapis</a>
     </footer>
+    <p id="last-paragraph">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum possimus
+      provident ipsum ad pariatur, autem quia inventore commodi quisquam, soluta
+      nemo sed. Ratione libero numquam explicabo excepturi consequuntur suscipit
+      hic esse sequi minus doloremque deleniti, vitae officiis iste fugit. Et
+      amet molestiae minima natus, nulla odit itaque obcaecati voluptates fuga.
+    </p>
   </body>
 </html>
