--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,25 @@
   </head>
   <body>
     <p>address 1: Laisves al. 33, Kaunas</p>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2294.3391814808288!2d23.916250877258044!3d54.89696877277941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e7227693b53577%3A0x7b8e6ab5bd0b3840!2sLaisv%C4%97s%20al.%2033%2C%20Kaunas%2C%2044311%20Kauno%20m.%20sav.!5e0!3m2!1slt!2slt!4v1757412384487!5m2!1slt!2slt"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
     <p>address 2: Kestucio g. 53, Kaunas</p>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1364.271989117615!2d23.912499873841153!3d54.895500118068995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e72273f16c9cf9%3A0x1c0d7d7d79bdaa33!2sK%C4%99stu%C4%8Dio%20g.%2053%2C%20Kaunas%2C%2044307%20Kauno%20m.%20sav.!5e0!3m2!1slt!2slt!4v1757412465632!5m2!1slt!2slt"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
     <a href="./index.html">Grizti i pradini puslapi</a>
   </body>
 </html>
