--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
     <header>
       <h1>esports.lt</h1>
       <nav>
+        <form action="./thankspage.html"></form>
+        <label for="email">Iveskite el. pasta:</label>
+        <input type="email" id="email" autofocus />
+
+        <label for="pass">Iveskite slaptazodi: </label>
+        <input type="password" id="pass" />
+
+        <p>Pasirinkite miesta:</p>
+
+        <label for="city1">Vilnius</label>
+        <input type="radio" id="city1" name="city" />
+
+        <label for="city2">Kaunas</label>
+        <input type="radio" id="city2" name="city" />
+
+        <label for="city3">Klaipeda</label>
+        <input type="radio" id="city3" name="city" />
+        <select name="" id="">
+          <option value="v1">Lietuva</option>
+          <option value="v2">Lenkija</option>
+          <option value="v3">Indija</option>
+          <option value="v4">Rusija</option>
+        </select>
+        <textarea
+          name=""
+          id=""
+          cols="10"
+          rows="5"
+          placeholder="Daryk ka nori"
+        ></textarea>
+        <button>Pateikti</button>
+        <hr />
         <p>CSGO</p>
         <p>Valorant</p>
         <p>LOL</p>
@@ -18,6 +50,51 @@
       </nav>
     </header>
     <main>
+      <table border="1">
+        <tr>
+          <td>cele 1</td>
+          <td>cele 2</td>
+          <td>cele 3</td>
+        </tr>
+        <tr>
+          <td>cele 4</td>
+          <td>cele 5</td>
+          <td>cele 6</td>
+        </tr>
+        <tr>
+          <th colspan="3">cele 7</th>
+        </tr>
+      </table>
+      <hr />
+      <table border="1">
+        <caption>
+          Galiorka
+        </caption>
+        <thead>
+          <tr>
+            <th>Kompiuteris</th>
+            <th>Vardas</th>
+            <th>Amzius</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>10</td>
+            <td>Jurgis</td>
+            <td>34</td>
+          </tr>
+          <tr>
+            <td>11</td>
+            <td>Vilius</td>
+            <td>?</td>
+          </tr>
+          <tr>
+            <td>12</td>
+            <td>Egis</td>
+            <td>27</td>
+          </tr>
+        </tbody>
+      </table>
       <h2>Gamecon jau greitai Kaune</h2>
       <p>Jau si rugseji Kaune vyks bla bla bla bla</p>
       <article>
@@ -65,6 +142,20 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto.</p>
       </article>
     -->
+      <h2>Relatyvus paveikslelis</h2>
+      <img
+        src="images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg"
+        alt="retro zaidimu kompiuteriai"
+        width="320"
+        height="200"
+      />
+      <h2>Internetinis paveikslelis</h2>
+      <img
+        src="https://plus.unsplash.com/premium_photo-1682088486926-42e23e19f421?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGdhbWluZ3xlbnwwfHwwfHx8MA%3D%3D"
+        alt="gamer girl"
+        width="320"
+        height="200"
+      />
       <article>
         <h4>Geriausi geimai</h4>
         <ol>
