--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>esports.lt</h1>
       <nav>
-        <form action="./thankspage.html"></form>
+        <form action="./thankspage.html" method="POST"></form>
         <label for="email">Iveskite el. pasta:</label>
         <input type="email" id="email" autofocus />
 
