--- a/index.html
+++ b/index.html
@@ -95,53 +95,55 @@
           </tr>
         </tbody>
       </table>
-      <h2>Gamecon jau greitai Kaune</h2>
-      <p>Jau si rugseji Kaune vyks bla bla bla bla</p>
-      <article>
-        <h4>Lorem, ipsum dolor.</h4>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo, maxime
-          quibusdam. Hic placeat numquam perferendis totam doloribus doloremque
-          ab itaque ratione, magnam a dolores officia! Sed voluptatum ex
-          eligendi quas.
-        </p>
-      </article>
-      <article>
-        <h4>Lorem ipsum dolor sit amet.</h4>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi quo
-          nulla, autem voluptates dolore necessitatibus!
-        </p>
-      </article>
-      <article>
-        <h4>Lorem ipsum dolor sit amet.</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum
-          libero rem nulla tempore explicabo illo at a voluptatum!
-        </p>
-      </article>
-      <article>
-        <h4>Lorem, ipsum dolor.</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
-          dolores tempora.
-        </p>
-      </article>
-      <article>
-        <h4>Lorem, ipsum dolor.</h4>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem
-          voluptatem corrupti ipsam aspernatur, suscipit magnam consequuntur est
-          minima cupiditate sed officia neque nihil eveniet architecto nam
-          repudiandae explicabo voluptatibus? Dolore.
-        </p>
-      </article>
-      <!--
+      <section>
+        <h2>Gamecon jau greitai Kaune</h2>
+        <p>Jau si rugseji Kaune vyks bla bla bla bla</p>
+        <article>
+          <h4>Lorem, ipsum dolor.</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo,
+            maxime quibusdam. Hic placeat numquam perferendis totam doloribus
+            doloremque ab itaque ratione, magnam a dolores officia! Sed
+            voluptatum ex eligendi quas.
+          </p>
+        </article>
+        <article>
+          <h4>Lorem ipsum dolor sit amet.</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
+            quo nulla, autem voluptates dolore necessitatibus!
+          </p>
+        </article>
+        <article>
+          <h4>Lorem ipsum dolor sit amet.</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum
+            libero rem nulla tempore explicabo illo at a voluptatum!
+          </p>
+        </article>
+        <article>
+          <h4>Lorem, ipsum dolor.</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perferendis, dolores tempora.
+          </p>
+        </article>
+        <article>
+          <h4>Lorem, ipsum dolor.</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem
+            voluptatem corrupti ipsam aspernatur, suscipit magnam consequuntur
+            est minima cupiditate sed officia neque nihil eveniet architecto nam
+            repudiandae explicabo voluptatibus? Dolore.
+          </p>
+        </article>
+        <!--
       <article>
         <h4>Lorem, ipsum.</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto.</p>
       </article>
     -->
+      </section>
       <h2>Relatyvus paveikslelis</h2>
       <img
         src="images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg"
